<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.5.2</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>ITI</groupId>
	<artifactId>Project</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>Java Project</name>
	<description>Java project for manipulating a dataset</description>
	<properties>
		<java.version>11</java.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		
		<dependency>
			<groupId>org.apache.spark</groupId>
			<artifactId>spark-core_2.12</artifactId>
			<version>3.1.1</version>
		</dependency>
	
		<dependency>
    		<groupId>com.github.haifengl</groupId>
    		<artifactId>smile-core</artifactId>
    		<version>2.6.0</version>
		</dependency>
    	
    	<dependency>
        	<groupId>com.github.haifengl</groupId>
        	<artifactId>smile-data</artifactId>
        	<version>2.6.0</version>
    	</dependency>
    	
    	<dependency>
        	<groupId>com.github.haifengl</groupId>
        	<artifactId>smile-io</artifactId>
        	<version>2.6.0</version>
    	</dependency>
    	
    	<dependency>
        	<groupId>com.github.haifengl</groupId>
        	<artifactId>smile-plot</artifactId>
        	<version>2.6.0</version>
    	</dependency>  
  		
  		<dependency>
    		<groupId>tech.tablesaw</groupId>
    		<artifactId>tablesaw-core</artifactId>
    		<version>0.38.2</version>
		</dependency>
		
		<dependency>
    		<groupId>joinery</groupId>
    		<artifactId>joinery-dataframe</artifactId>
    		<version>1.8</version>
		</dependency>
		
		<dependency>
    		<groupId>org.apache.poi</groupId>
    		<artifactId>poi-ooxml-schemas</artifactId>
    		<version>3.15</version>
		</dependency>
		
		<dependency>
			<groupId>org.apache.poi</groupId>
        	<artifactId>poi</artifactId>
        	<version>3.9</version>
    	</dependency>
    	
    	<dependency>
        	<groupId>org.apache.poi</groupId>
        	<artifactId>poi-ooxml</artifactId>
        	<version>3.9</version>
    	</dependency>
    	
    	<dependency>
        	<groupId>org.apache.poi</groupId>
        	<artifactId>poi-ooxml-schemas</artifactId>
        	<version>3.9</version>
    	</dependency>
    	
    	<dependency>
        	<groupId>org.apache.poi</groupId>
        	<artifactId>poi-scratchpad</artifactId>
        	<version>3.9</version>
    	</dependency>
    	
    	<dependency>
       		<groupId>org.apache.poi</groupId>
        	<artifactId>ooxml-schemas</artifactId>
        	<version>1.1</version>
    	</dependency>
    	
    	<dependency>
        	<groupId>org.apache.poi</groupId>
        	<artifactId>openxml4j</artifactId>
        	<version>1.0-beta</version>
    	</dependency>
  		
  		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.8.0</version>
		</dependency>
		
		<dependency> 
    		<groupId>org.knowm.xchart</groupId> 
    		<artifactId>xchart</artifactId> 
    		<version>3.8.0</version> 
		</dependency> 
		
		<dependency> 
    		<groupId>org.knowm.xchart</groupId> 
    		<artifactId>xchart-demo</artifactId> 
    		<version>3.8.0</version> 
		</dependency> 
		
		<dependency> 
    		<groupId>org.knowm.xchart</groupId> 
    		<artifactId>xchart-parent</artifactId> 
    		<version>3.8.0</version> 
    		<type>pom</type> 
		</dependency>
	</dependencies>
	<repositories> 
    	<repository> 
        	<snapshots> 
            	<enabled>false</enabled> 
        	</snapshots> 
        	<id>central</id> 
        	<name>bintray</name> 
        	<url>http://jcenter.bintray.com</url> 
    	</repository> 
  	</repositories>
  	<pluginRepositories> 
    	<pluginRepository> 
        	<snapshots> 
            	<enabled>false</enabled> 
        	</snapshots> 
        	<id>central</id> 
        	<name>bintray-plugins</name> 
        	<url>http://jcenter.bintray.com</url> 
    	</pluginRepository> 
  	</pluginRepositories>
	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

</project>
